<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">ods</string>
    <string name="app_exit_message">"\'확인\'버튼을 누르시면 앱이 종료됩니다."</string>
    <string name="logout_message">로그아웃 하시겠습니까?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="report_title">추가서류제출</string>
    <string name="visit_title">방문보고서작성</string>
    <string name="take_report_addition"><![CDATA["※"]]> 추가서류를 제출 하실 경우 하단의 \'추가서류촬영\' 버튼을 눌러주세요</string>
    <string name="take_picture_addition"><![CDATA["※"]]> 사진을 제출 하실 경우 하단의 \'추가사진촬영\' 또는 \'앨범에서 가져오기\'버튼을 눌러주세요</string>
    <string name="picture_list">촬영목록</string>
    <string name="pic_report">추가서류촬영</string>
    <string name="pic_picture">추가사진촬영</string>
    <string name="medi_title">메디칼론 약정</string>
    <string name="complete_submit">완료 및 전송</string>
    <string name="addition_report_list">추가서류목록</string>
    <string name="selection">선택</string>
    <string name="show">보기</string>
    <string name="delete">삭제</string>
    <string name="show_title">이미지보기</string>
    <string name="close">닫기</string>
    <string name="delete_confirm">삭제하시겠습니까?</string>
    <string name="ok">확인</string>
    <string name="leas">리스</string>
    <string name="alert_photo_send">사진촬영목록이 없습니다.\n이대로 약정서를 완료하시겠습니까?</string>
    <string name="alert_term_exit">약정 단계를 모두 취소하고 처음으로 가시겠습니까?</string>
    <string name="alert_leas_exit">사진첨부를 취소하시겠습니까?</string>
    <string name="alert_visit_photo_exit">사진 첨부를 취소하고 상세화면으로 돌아가시겠습니까?</string>
    <string name="alert_leas_no_photo">사진촬영목록이 없습니다.</string>
    <string name="setting">설정</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="alert">알림</string>
    <string name="get_album">앨범에서 가져오기</string>
    <string name="alert_select_one">첨부하실 서류의 종류를 선택해주세요.</string>
    <string name="ib20error">잘못된 서버 응답 입니다.</string>

    <!-- 인트로 -->
    <string name="init_intro">서비스에 필요한 정보를 불러오는 중입니다.</string>
    <string name="init_app_terminate">앱 초기화에 실패 했습니다.</string>
    <string name="init_appiron_terminate">앱 위변조 초기화에 실패 했습니다. 어플리케이션을 종료 합니다.</string>
    <string name="init_app_network">인터넷에 연결되지 않음. 인터넷 연결을 확인해 주세요.</string>

    <!-- 메인 -->
    <string name="init_main">어플리케이션 화면 구성중입니다.</string>

    <!-- 권한 설정 -->
    <string name="permission_title">앱접근 권한 안내</string>
    <string name="permission_info1">IBK캐피탈에서 사용하는 접근권한에 대해</string>
    <string name="permission_info2">다음과 같이 알려드립니다.</string>
    <string name="permission_necessary_title">필수적 접근권한</string>
    <string name="permission_select_title">선택적 접근권한</string>
    <string name="permission_change_title">접근권한 변경방법</string>

    <string name="permission_call">전화걸기, 관리</string>
    <string name="permission_call_info">IBK 캐피탈 이용을 위해 휴대폰 기기정보를 수집합니다.</string>
    <string name="permission_address">주소록 엑세스</string>
    <string name="permission_address_info">푸쉬, 메시지 전송 등 주소록을 불러올대 필요합니다.</string>
    <string name="permission_sms">SMS 메시지</string>
    <string name="permission_sms_info">SMS메시지 전송 및 SMS추가인증 시 수신한 인증번호에 대한 읽기 기능이 필요합니다.</string>
    <string name="permission_storage">저장공간</string>
    <string name="permission_storage_info">공인인증서 등 보안매체 접근을 위해 필요합니다.</string>
    <string name="permission_camera">카메라</string>
    <string name="permission_camera_info">신분증 인식, 추가징구서류 등록을 위해 사용합니다.</string>
    <string name="permission_permission_info1">※ IBK 캐피탈은 고객님의 원활한 앱 이용을 위해 최소한의 접근권한을 요청합니다.</string>
    <string name="permission_permission_info2">※ 선택적 접근권한은 동의하지 않아도 서비스를 이용할 수 있으나,일부 기능 사용에 제한이 있을 수 있습니다.</string>
    <string name="permission_change_info">휴대폰 설정 > 애플리케이션(앱)관리 > IBK캐피탈 > 권한</string>

    <!-- 퍼미션 권한 관리 -->
    <string name="permission_ncessary_check">필수 권한 체크가 되지 않았습니다 어플리케이션을 종료 합니다.</string>
    <string name="permission_ncessary_setting">[설정] > [어플리케이션] > [권한] 에서 어플리케이션 필수 권한설정을 할수 있습니다.</string>

    <!-- TAG -->
    <string name="web_view_type_tag">webViewTypeTag</string>
    <string name="web_view_history_tag">webViewHistoryTag</string>

    <!-- 백신 -->
    <string name="mv_app_name">TouchEn mVaccine</string>
    <string name="mv_mVaccineScanning">mVaccine is Running</string>
    <string name="mv_COMMON_COPYRIGHT">© 2013 RAONSECURE,Inc. All rights reserved.</string>
    <string name="mv_dialog_stopdialog_textview">seconds after, Scanning will in the background</string>
    <string name="mv_no">no</string>
    <string name="mv_yes">yes</string>
    <string name="mv_msg_rootingexitapp">Can not run on rooted devcie</string>
    <string name="mv_msg_rootingyesorno">This device was rooted ,If you click yes scanning will be stopped . you click no scanning will be continued </string>
    <string name="mv_msg_rootingyes">This device was rooted , Is not safe </string>
    <string name="mv_count">count : </string>
    <string name="mv_infected">infected : </string>
    <string name="mv_pattern">pattern : </string>
    <string name="mv_engine">engine : </string>
    <string name="mv_dualengine">dualengine : </string>
    <string name="mv_scan_result">Result</string>
    <string name="mv_scan_result_msg">Malware has been detected. if you want remove click yes.</string>
    <string name="mv_scan_detect_malware">TouchEn mVaccine was detect Malware </string>
    <string name="mv_title_rootscan">Check rooting </string>
    <string name="mv_msg_rootapp">Rooting related apps installed. Please run it again after deletion. </string>
    <string name="mv_msg_detect_malware_count"> malware was detected </string>
    <string name="mv_msg_surenot_delete">You are not remove malware. Are you sure you want to exit ? </string>
    <string name="mv_delete">delete</string>
    <string name="mv_close">close</string>
    <string name="mv_malware_name">malware name : </string>
    <string name="mv_risk_high">risk : high</string>
    <string name="mv_stop">stop</string>
    <string name="mv_scanning_middle_title">scanning. . .</string>
    <string name="mv_path">path: </string>
    <string name="mv_msg_updateprogress"> Being updated.\nIt take several seconds defending on network speed </string>
    <string name="mv_check_license">check license</string>
    <string name="mv_license_expired">license expired</string>
    <string name="mv_license_not_matched">your license key is invalid</string>
    <string name="mv_siteid_error">your site id is invalid</string>
    <string name="mv_sure_stop_scan">Are you sure you want to stop the scan?</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
