<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/color_ffffff"
            android:layout_margin="-5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="49dp"
                android:layout_marginTop="49dp"
                android:gravity="center_horizontal"
                android:text="@string/delete_confirm"
                android:textColor="@color/color_333333"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_8a90a6"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_marginRight="3dp"
                    android:text="@string/cancel"
                    android:textColor="@color/color_ffffff"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_4b6bd1"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/color_ffffff"
                    android:textSize="15dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>