<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_area"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/color_3a425b"
            android:paddingEnd="35dp"
            android:paddingStart="35dp">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/report_title"
                android:textColor="@color/color_ffffff"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_home"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/home" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/btn_home"
                android:background="@drawable/logout" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/navi"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/step" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_camera"
                android:layout_width="27dp"
                android:layout_height="22dp"
                android:layout_below="@id/navi"
                android:layout_marginTop="11dp"
                android:background="@drawable/photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/navi"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="11dp"
                android:layout_toRightOf="@id/img_camera"
                android:text="@string/picture_list"
                android:textColor="@color/color_000000"
                android:textSize="19dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/color_000000"
            android:textSize="15dp" />

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:layout_weight="1"
            android:horizontalSpacing="13dp"
            android:numColumns="3"
            android:verticalSpacing="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/btn_action"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_6e7591"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/plus" />

                <TextView
                    android:id="@+id/txt_btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/color_ffffff"
                    android:textSize="23dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_album"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:background="@color/color_6e7591"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/plus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/get_album"
                    android:textColor="@color/color_ffffff"
                    android:textSize="23dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_complete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/color_4b6bd0"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/complete_submit"
                    android:textColor="@color/color_ffffff"
                    android:textSize="23dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>